# solidity_to_multiversx

./: .gitignore  Cargo.toml  Dockerfile  README.md  README.me  SimpleContract.rs  SimpleContract.sol  compare_outputs.py  output_crowdfunding.rs  output_erc20.rs  output_nft.rs  output_simple_storage.rs  output_voting.rs  simplified_transpiler.py  test_results_summary.md  test_script.py  transpiler_report.md
contracts/: Crowdfunding.sol  SimpleContract.rs  SimpleContract.sol  (+2 more)
ping-pong-test/: Cargo.toml
ping-pong-test/meta/: Cargo.toml
ping-pong-test/meta/src/: main.rs
ping-pong-test/output/: ping-pong-test-dbg.mxsc.json  ping-pong-test-dbg.wasm  ping-pong-test-dbg.wat  ping-pong-test.abi.json
ping-pong-test/scenarios/: ping-pong-call-ping-after-deadline.scen.json  ping-pong-call-ping-before-activation.scen.json  ping-pong-call-ping-before-beginning.scen.json  ping-pong-call-ping-second-user.scen.json  ping-pong-call-ping-twice.scen.json  ping-pong-call-ping-wrong-ammount.scen.json  ping-pong-call-ping.scen.json  ping-pong-call-pong-all-after-pong.scen.json  ping-pong-call-pong-all-interrupted-1.scen.json  ping-pong-call-pong-all-interrupted-2.scen.json  ping-pong-call-pong-all.steps.json  ping-pong-call-pong-before-deadline.scen.json  ping-pong-call-pong-twice.scen.json  ping-pong-call-pong-without-ping.scen.json  ping-pong-call-pong.scen.json  ping-pong-init.scen.json
ping-pong-test/src/: ping_pong_test.rs  proxy_ping_pong_egld.rs
ping-pong-test/tests/: ping_pong_egld_scenario_rs_test.rs
ping-pong-test/wasm/: Cargo.toml
ping-pong-test/wasm/src/: lib.rs
(+32 files in other folders)
