[package]
name = "solidity-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
pest = "=2.7"
pest_derive = "=2.7"
clap = { version = "=4.4", features = ["derive"] }
serde = { version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
convert_case = "=0.6"
solang-parser = "=0.3.3"
regex = "1.11.1"
Inflector = "0.11"
