[package]
name = "solidity_to_multiversx"
version = "0.1.0"
edition = "2021"

[dependencies]
solang-parser = "0.3.3"
anyhow = "1.0.75"
clap = { version = "4.4.18", features = ["derive"] }
pest = "2.7.5"
pest_derive = "2.7.5"
serde = { version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
convert_case = "=0.6"
regex = "1.11.1"
Inflector = "0.11"
