[package]
name = "ping-pong-test"
version = "0.0.2"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/ping_pong_test.rs"

[dependencies.multiversx-sc]
version = "0.57.0"

[dev-dependencies.multiversx-sc-scenario]
version = "0.57.0"

[workspace]
members = [
    ".",
    "meta",
]
